LUCENE-2321: cutover to packed ints for in-memory terms dict index
git-svn-id: https://svn.apache.org/repos/asf/lucene/java/branches/flex_1458@927234 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -34,6 +34,10 @@ New features
   bounded, for example for storing the terms dict index Toke Toke
   Eskildsen via Mike McCandless)
 
+* LUCENE-2321: Cutover to a more RAM efficient packed-ints based
+  representation for the in-memory terms dict index.  (Mike
+  McCandless)
+
 ======================= Trunk (not yet released) =======================
 
 Changes in backwards compatibility policy
