LUCENE-2126: Split up IndexInput and IndexOutput and introduce DataInput and DataOutput.
git-svn-id: https://svn.apache.org/repos/asf/lucene/java/branches/flex_1458@929340 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -53,6 +53,10 @@ New features
   representation for the in-memory terms dict index.  (Mike
   McCandless)
 
+* LUCENE-2126: Add new classes for data (de)serialization: DataInput
+  and DataOutput.  IndexInput and IndexOutput extend these new classes.
+  (Michael Busch)
+
 ======================= Trunk (not yet released) =======================
 
 Changes in backwards compatibility policy
