--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -48,6 +48,10 @@ Bug fixes
    (for example, text:foo^0) sorted incorrectly and produced
    invalid docids. (yonik)
 
+ * LUCENE-2422: Don't reuse byte[] in IndexInput/Output -- it gains
+   little performance, and ties up possibly large amounts of memory
+   for apps that index large docs.  (Ross Woolf via Mike McCandless)
+
 API Changes
 
  * LUCENE-2190: Added a new class CustomScoreProvider to function package
