--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -9,6 +9,10 @@ Bug fixes
    little performance, and ties up possibly large amounts of memory
    for apps that index large docs.  (Ross Woolf via Mike McCandless)
 
+ * LUCENE-2387: Don't hang onto Fieldables from the last doc indexed,
+   in IndexWriter, nor the Reader in Tokenizer after close is
+   called.  (Ruben Laguna, Uwe Schindler, Mike McCandless)
+
 API Changes
 
 * LUCENE-2281: added doBeforeFlush to IndexWriter to allow extensions to perform
