--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,14 @@
 Lucene Change Log
 $Id$
 
+======================= 2.9 branch (not yet released) ==================
+
+Bug fixes
+
+ * LUCENE-2387: Don't hang onto Fieldables from the last doc indexed,
+   in IndexWriter, nor the Reader in Tokenizer after close is
+   called.  (Ruben Laguna, Uwe Schindler, Mike McCandless)
+
 ======================= Release 2.9.2 2010-02-26 =======================
 
 Bug fixes
