LUCENE-2467: fix memory leaks in IW when indexing very large docs
git-svn-id: https://svn.apache.org/repos/asf/lucene/java/branches/lucene_2_9@945608 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -20,6 +20,9 @@ Bug fixes
    indexing a mix of small and large documents.  (Tim Smith via Mike
    McCandless)
   
+ * LUCENE-2467: Fixed memory leaks in IndexWriter when large documents
+   are indexed.  (Mike McCandless)
+
 ======================= Release 2.9.2 2010-02-26 =======================
 
 Bug fixes
