LUCENE-2473: Clicking on the more results link in luceneweb.war demo results in AIOOBE
git-svn-id: https://svn.apache.org/repos/asf/lucene/java/branches/lucene_3_0@946612 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -22,6 +22,10 @@ Bug fixes
 * LUCENE-2467: Fixed memory leaks in IndexWriter when large documents
   are indexed.  (Mike McCandless)
 
+* LUCENE-2473: Clicking on the "More Results" link in the luceneweb.war
+  demo resulted in ArrayIndexOutOfBoundsException.
+  (Sami Siren via Robert Muir)
+
 API Changes
 
 * LUCENE-2281: added doBeforeFlush to IndexWriter to allow extensions to perform
