LUCENE-2473: Clicking on the more results link in luceneweb.war demo results in AIOOBE
git-svn-id: https://svn.apache.org/repos/asf/lucene/java/branches/lucene_2_9@946615 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -23,6 +23,10 @@ Bug fixes
  * LUCENE-2467: Fixed memory leaks in IndexWriter when large documents
    are indexed.  (Mike McCandless)
 
+ * LUCENE-2473: Clicking on the "More Results" link in the luceneweb.war
+   demo resulted in ArrayIndexOutOfBoundsException.
+   (Sami Siren via Robert Muir)
+
 ======================= Release 2.9.2 2010-02-26 =======================
 
 Bug fixes
