LUCENE-2476: release write lock on any exception during IndexWriter ctor
git-svn-id: https://svn.apache.org/repos/asf/lucene/java/branches/lucene_3_0@948090 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -26,6 +26,10 @@ Bug fixes
   demo resulted in ArrayIndexOutOfBoundsException.
   (Sami Siren via Robert Muir)
 
+* LUCENE-2476: If any exception is hit init'ing IW, release the write
+  lock (previously we only released on IOException).  (Tamas Cservenak
+  via Mike McCandless)
+
 API Changes
 
 * LUCENE-2281: added doBeforeFlush to IndexWriter to allow extensions to perform
