LUCENE-2478: Fix CachingWrapperFilter to not throw NPE when Filter.getDocIdSet() returns null (2.9)
git-svn-id: https://svn.apache.org/repos/asf/lucene/java/branches/lucene_2_9@948450 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -27,6 +27,9 @@ Bug fixes
    demo resulted in ArrayIndexOutOfBoundsException.
    (Sami Siren via Robert Muir)
 
+ * LUCENE-2478: Fix CachingWrapperFilter to not throw NPE when
+   Filter.getDocIdSet() returns null.  (Uwe Schindler, Daniel Noll)
+
 ======================= Release 2.9.2 2010-02-26 =======================
 
 Bug fixes
