--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -44,6 +44,9 @@ Bug fixes
 * LUCENE-2397: Don't throw NPE from SnapshotDeletionPolicy.snapshot if
   there are no commits yet (Shai Erera)
 
+* LUCENE-2424: Fix FieldDoc.toString to not just fallback to
+  super.toString() (Stephen Green via Mike McCandless)
+
 API Changes
 
 * LUCENE-2281: added doBeforeFlush to IndexWriter to allow extensions to perform
