--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -5,6 +5,9 @@ $Id$
 
 Bug fixes
 
+* LUCENE-2142: FieldCacheImpl.getStringIndex no longer throws an
+  exception when term count exceeds doc count.  (Mike McCandless)
+  
 * LUCENE-2283: Use shared memory pool for term vector and stored
   fields buffers. This memory will be reclaimed if needed according to
   the configured RAM Buffer Size for the IndexWriter.  This also fixes
