LUCENE-2119: better handle too-large top N to pqueue or IndexSearcher.search
git-svn-id: https://svn.apache.org/repos/asf/lucene/java/branches/lucene_3_0@950135 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -5,6 +5,10 @@ $Id$
 
 Bug fixes
 
+* LUCENE-2119: Don't throw NegativeArraySizeException if you pass
+  Integer.MAX_VALUE as nDocs to IndexSearcher search methods.  (Paul
+  Taylor via Mike McCandless)
+
 * LUCENE-2142: FieldCacheImpl.getStringIndex no longer throws an
   exception when term count exceeds doc count.  (Mike McCandless)
   
