LUCENE-2046: IndexReader should not see index as changed after prepareCommit but before commit
git-svn-id: https://svn.apache.org/repos/asf/lucene/java/branches/lucene_2_9@950172 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -14,6 +14,10 @@ Changes in runtime behavior
 
 Bug fixes
 
+* LUCENE-2046: IndexReader should not see the index as changed, after
+  IndexWriter.prepareCommit has been called but before
+  IndexWriter.commit is called. (Peter Keegan via Mike McCandless)
+
 * LUCENE-2119: Don't throw NegativeArraySizeException if you pass
   Integer.MAX_VALUE as nDocs to IndexSearcher search methods.  (Paul
   Taylor via Mike McCandless)
