LUCENE-2421: NativeFSLockFactory does not throw LockReleaseFailedExc if it cannot delete lock file
git-svn-id: https://svn.apache.org/repos/asf/lucene/java/branches/lucene_3_0@950208 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -2,6 +2,11 @@ Lucene Change Log
 $Id$
 
 ======================= 3.0 branch (not yet released) ==================
+Changes in runtime behavior
+
+* LUCENE-2421: NativeFSLockFactory does not throw LockReleaseFailedException if 
+  it cannot delete the lock file, since obtaining the lock does not fail if the 
+  file is there. (Shai Erera)
 
 Bug fixes
 
