LUCENE-2421: NativeFSLockFactory does not throw LockReleaseFailedExc if it cannot delete lock file
git-svn-id: https://svn.apache.org/repos/asf/lucene/java/branches/lucene_2_9@950210 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -5,6 +5,10 @@ $Id$
 
 Changes in runtime behavior
 
+* LUCENE-2421: NativeFSLockFactory does not throw LockReleaseFailedException if 
+  it cannot delete the lock file, since obtaining the lock does not fail if the 
+  file is there. (Shai Erera)
+
 * LUCENE-2060: Changed ConcurrentMergeScheduler's default for
   maxNumThreads from 3 to 1, because in practice we get the most gains
   from running a single merge in the backround.  More than one
