LUCENE-2161: NRT concurrency fixes
git-svn-id: https://svn.apache.org/repos/asf/lucene/java/branches/lucene_2_9@950306 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -82,6 +82,9 @@ API Changes
 
 Optimizations
 
+* LUCENE-2161: Improve concurrency of IndexReader, especially in the
+  context of near real-time readers.  (Mike McCandless)
+
 * LUCENE-2360: Small speedup to recycling of reused per-doc RAM in
   IndexWriter (Robert Muir, Mike McCandless)
 
