LUCENE-2356: allow setting termsIndexDivisor for all readers opened by IW
git-svn-id: https://svn.apache.org/repos/asf/lucene/java/branches/lucene_2_9@950487 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -91,6 +91,11 @@ API Changes
   operations before flush starts. Also exposed doAfterFlush as protected instead
   of package-private. (Shai Erera via Mike McCandless)
 
+* LUCENE-2356: Add IndexWriter.set/getReaderTermsIndexDivisor, to set
+  what IndexWriter passes for termsIndexDivisor to the readers it
+  opens internally when applying deletions or creating a
+  near-real-time reader.  (Earwin Burrfoot via Mike McCandless)
+
 Optimizations
 
 * LUCENE-2135: On IndexReader.close, forcefully evict any entries from
