LUCENE-2311: pass fully loaded reader to mergedSegmentWarmer
git-svn-id: https://svn.apache.org/repos/asf/lucene/java/branches/lucene_2_9@950672 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -97,6 +97,11 @@ Bug fixes
 * LUCENE-2424: Fix FieldDoc.toString to actually return its fields
   (Stephen Green via Mike McCandless)
 
+* LUCENE-2311: Always pass a "fully loaded" (terms index & doc stores)
+  SegmentsReader to IndexWriter's mergedSegmentWarmer (if set), so
+  that warming is free to do whatever it needs to.  (Earwin Burrfoot
+  via Mike McCandless)
+
 API Changes
 
 * LUCENE-2281: added doBeforeFlush to IndexWriter to allow extensions to perform
