--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,7 +1,7 @@
 Lucene Change Log
 $Id$
 
-======================= 2.9 branch (not yet released) ==================
+======================= Release 2.9.3 2010-06-18 =======================
 
 Changes in backwards compatibility policy
 
