--- a/contrib/CHANGES.txt
+++ b/contrib/CHANGES.txt
@@ -1,5 +1,9 @@
 Lucene contrib change Log
 
+======================= Release 2.9.3 2010-06-18 =======================
+
+No changes.
+
 ======================= Release 2.9.2 2010-02-26 =======================
 
 New features
