Prepare the 3.0.2 release
git-svn-id: https://svn.apache.org/repos/asf/lucene/java/branches/lucene_3_0@951388 13f79535-47bb-0310-9956-ffa450edef68

--- a/contrib/CHANGES.txt
+++ b/contrib/CHANGES.txt
@@ -1,5 +1,9 @@
 Lucene contrib change Log
 
+======================= Release 3.0.2 2010-06-18 =======================
+
+No changes.
+
 ======================= Release 3.0.1 2010-02-26 =======================
 
 New features
