--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,7 +1,7 @@
 Lucene Change Log
 $Id$
 
-======================= 3.0 branch (not yet released) ==================
+======================= Release 3.0.2 2010-06-18 =======================
 
 Changes in backwards compatibility policy
 
