LUCENE-2494: use CompletionService in ParallelMultiSearcher instead of simple polling
git-svn-id: https://svn.apache.org/repos/asf/lucene/java/branches/lucene_3_0@953621 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -108,6 +108,9 @@ API Changes
 
 Optimizations
 
+* LUCENE-2494: Use CompletionService in ParallelMultiSearcher instead of
+  simple polling for resutls. (Edward Drapkin, Simon Willnauer) 
+
 * LUCENE-2135: On IndexReader.close, forcefully evict any entries from
   the FieldCache rather than waiting for the WeakHashMap to release
   the reference (Mike McCandless)
