--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -109,7 +109,7 @@ API Changes
 Optimizations
 
 * LUCENE-2494: Use CompletionService in ParallelMultiSearcher instead of
-  simple polling for resutls. (Edward Drapkin, Simon Willnauer) 
+  simple polling for results. (Edward Drapkin, Simon Willnauer) 
 
 * LUCENE-2135: On IndexReader.close, forcefully evict any entries from
   the FieldCache rather than waiting for the WeakHashMap to release
