LUCENE-2142 (correct fix): FieldCacheImpl.getStringIndex no longer throws an exception when term count exceeds doc count
git-svn-id: https://svn.apache.org/repos/asf/lucene/java/branches/lucene_3_0@957495 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,14 @@
 Lucene Change Log
 $Id$
 
+======================= 3.0 branch (not yet released) ==================
+
+Bug fixes
+
+* LUCENE-2142 (correct fix): FieldCacheImpl.getStringIndex no longer
+  throws an exception when term count exceeds doc count.
+  (Mike McCandless, Uwe Schindler)
+
 ======================= Release 3.0.2 2010-06-18 =======================
 
 Changes in backwards compatibility policy
