LUCENE-2536: fix IW.rollback to not apply buffered deletes against flushed segments
git-svn-id: https://svn.apache.org/repos/asf/lucene/java/branches/lucene_2_4@963790 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -13,6 +13,10 @@ Bug fixes
    contain field names with non-ascii characters.  (Mike Streeton via
    Mike McCandless)
 
+3. LUCENE-2536: IndexWriter.rollback was failing to properly rollback
+   buffered deletions against segments that were flushed (Mark Harwood
+   via Mike McCandless)
+
 ======================= Release 2.4.1 2009-03-09 =======================
 
 Bug fixes
