LUCENE-2593 (on 29x): fix certain rare cases where disk full could cause index corruption
git-svn-id: https://svn.apache.org/repos/asf/lucene/java/branches/lucene_2_9@984247 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -27,6 +27,9 @@ Bug fixes
   and float were not affected.
   (Yonik Seeley, Uwe Schindler)
 
+* LUCENE-2593: Fixed certain rare cases where a disk full could lead
+  to a corrupted index (Robert Muir, Mike McCandless)
+
 ======================= Release 2.9.3 2010-06-18 =======================
 
 Changes in backwards compatibility policy
