LUCENE-2620: Fix WildcardQuery bug where too many asterisks results in unbearably slow performance
git-svn-id: https://svn.apache.org/repos/asf/lucene/java/branches/lucene_3_0@988638 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -29,6 +29,9 @@ Bug fixes
 
 * LUCENE-2593: Fixed certain rare cases where a disk full could lead
   to a corrupted index (Robert Muir, Mike McCandless)
+  
+* LUCENE-2620: Fixed a bug in WildcardQuery where too many asterisks
+  would result in unbearably slow performance.  (Nick Barkas via Robert Muir)
 
 ======================= Release 3.0.2 2010-06-18 =======================
 
