LUCENE-2627: MMapDirectory bug when file size is exact multiple of chunk size
git-svn-id: https://svn.apache.org/repos/asf/lucene/java/branches/lucene_3_0@990293 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -33,6 +33,9 @@ Bug fixes
 * LUCENE-2620: Fixed a bug in WildcardQuery where too many asterisks
   would result in unbearably slow performance.  (Nick Barkas via Robert Muir)
 
+* LUCENE-2627: Fixed bug in MMapDirectory chunking when a file is an
+  exact multiple of the chunk size.  (Robert Muir)
+
 ======================= Release 3.0.2 2010-06-18 =======================
 
 Changes in backwards compatibility policy
