--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -39,6 +39,9 @@ Bug fixes
 * LUCENE-2634: isCurrent on an NRT reader was failing to return false
   if the writer had just committed (Nikolay Zamosenchuk via Mike McCandless)
 
+* LUCENE-2650: Added extra safety to MMapIndexInput clones to prevent accessing
+  an unmapped buffer if the input is closed (Mike McCandless, Uwe Schindler, Robert Muir) 
+  
 Documentation
 
 * LUCENE-2239: Documented limitations in NIOFSDirectory and MMapDirectory due to
