LUCENE-2689: don't attempt to acquire a test lock in NativeFSLockFactory
git-svn-id: https://svn.apache.org/repos/asf/lucene/java/branches/lucene_2_9@1005375 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -3,6 +3,12 @@ $Id$
 
 ======================= 2.9 branch (not yet released) ==================
 
+Changes in runtime behavior
+
+* LUCENE-2689: NativeFSLockFactory no longer attempts to acquire a
+  test lock just before the real lock is acquired.  (Surinder Pal
+  Singh Bindra via Mike McCandless)
+
 Bug fixes
 
 * LUCENE-2142 (correct fix): FieldCacheImpl.getStringIndex no longer
