LUCENE-2384: Reset zzBuffer in StandardTokenizerImpl when lexer is reset
git-svn-id: https://svn.apache.org/repos/asf/lucene/java/branches/lucene_2_9@1028744 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -48,6 +48,9 @@ Bug fixes
 * LUCENE-2650: Added extra safety to MMapIndexInput clones to prevent accessing
   an unmapped buffer if the input is closed (Mike McCandless, Uwe Schindler, Robert Muir)
   
+* LUCENE-2384: Reset zzBuffer in StandardTokenizerImpl when lexer is reset.
+  (Ruben Laguna via Uwe Schindler, sub-issue of LUCENE-2074) 
+  
 New features
 
 * LUCENE-2675: Add support for Lucene 3.0 stored field files also in 2.9.
