--- a/contrib/CHANGES.txt
+++ b/contrib/CHANGES.txt
@@ -1,5 +1,12 @@
 Lucene contrib change Log
 
+======================= 3.0 branch (not yet released) ==================
+
+Bug Fixes
+
+ * LUCENE-2277: QueryNodeImpl threw ConcurrentModificationException on 
+   add(List<QueryNode>). (Frank Wesemann via Robert Muir)
+
 ======================= Release 3.0.2 2010-06-18 =======================
 
 No changes.
