LUCENE-2277: QueryNodeImpl throws ConcurrentModificationException on add(List)
git-svn-id: https://svn.apache.org/repos/asf/lucene/java/branches/lucene_2_9@1028759 13f79535-47bb-0310-9956-ffa450edef68

--- a/contrib/CHANGES.txt
+++ b/contrib/CHANGES.txt
@@ -1,5 +1,12 @@
 Lucene contrib change Log
 
+======================= 2.9 branch (not yet released) ==================
+
+Bug Fixes
+
+ * LUCENE-2277: QueryNodeImpl threw ConcurrentModificationException on 
+   add(List<QueryNode>). (Frank Wesemann via Robert Muir)
+
 ======================= Release 2.9.3 2010-06-18 =======================
 
 No changes.
