LUCENE-2284: fix MatchAllDocsQueryNode toString() to close its XML tag
git-svn-id: https://svn.apache.org/repos/asf/lucene/java/branches/lucene_3_0@1028767 13f79535-47bb-0310-9956-ffa450edef68

--- a/contrib/CHANGES.txt
+++ b/contrib/CHANGES.txt
@@ -7,6 +7,9 @@ Bug Fixes
  * LUCENE-2277: QueryNodeImpl threw ConcurrentModificationException on 
    add(List<QueryNode>). (Frank Wesemann via Robert Muir)
 
+ * LUCENE-2284: MatchAllDocsQueryNode toString() created an invalid XML tag.
+   (Frank Wesemann via Robert Muir)
+
 ======================= Release 3.0.2 2010-06-18 =======================
 
 No changes.
